--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <!-- Prize Details Container -->
     <div class="container prize-container" id="prize-container">
         <h1>🎉 Congratulations! 🎉</h1>
-        <p id="result-message">You have won 0.5 SOL!</p>
+        <p id="result-message">You have won 1 SOL!</p> <!-- Updated Prize Amount -->
         <button id="get-prize-button" onclick="displayPrizeDetails()">Get Your Prize</button>
         <div class="prize-details">
             <p>Additionally, you can receive another prize by contacting our <a href="https://x.com/Soltreasuref" target="_blank">X Account</a>.</p>
